k8s/overlays/dev/route-blog-patch.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ac-portal-blog
spec:
  host: blog-dev.appcarrier.cloud
