k8s/overlays/dev/route-cms-patch.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ac-portal-cms
spec:
  host: cms-dev.appcarrier.cloud
