k8s/overlays/dev/route-patch.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ac-portal
spec:
  host: dev.appcarrier.cloud
